fix mybooks-dropper overflow

--- a/static/css/components/generic-dropper.less
+++ b/static/css/components/generic-dropper.less
@@ -9,8 +9,6 @@
 }
 
 .generic-dropper {
-  box-shadow: 0 0 0 1px @mid-grey;
-  border-radius: 4px;
   position: absolute;
   width: 100%;
   z-index: @z-index-level-14;
@@ -20,6 +18,9 @@
     flex-direction: row;
     align-items: stretch;
     cursor: pointer;
+    border-radius: 4px;
+    border: 1px solid @mid-grey;
+    overflow: hidden;
 
     * {
       color: @dark-grey;
@@ -33,27 +34,23 @@
 
       /* stylelint-disable max-nesting-depth */
       button {
-        border: 2px solid @grey-f3f3f3;
-        border-right: 1px solid @lighter-grey;
-        border-bottom-right-radius: 0;
-        border-top-right-radius: 0;
+        border: none;
         cursor: pointer;
         font-size: 1em;
+        height: 100%;
         width: 100%;
-        padding: 7px 0;
-        margin: 0;
       }
       /* stylelint-enable max-nesting-depth */
     }
     .generic-dropper__dropclick {
-      border-radius: 4px;
-      border-bottom-left-radius: 0;
-      border-top-left-radius: 0;
-      padding: 5px;
+      border-left: 1px solid @lighter-grey;
       text-decoration: none;
       height: inherit;
+      width: 40px;
 
       .display-flex();
+      justify-content: center;
+      align-items: center;
 
       /* stylelint-disable max-nesting-depth */
       h3 {
@@ -62,6 +59,7 @@
 
       .arrow {
         width: 23px;
+        height: 23px;
         background-image: url(/images/icons/icon_dropit.png);
         background-repeat: no-repeat;
         filter: grayscale(100%);
